added unit tests for some of the utility classes